--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql//localhost:3306/umsdb
+spring.datasource.username= root    
+spring.datasource.password= aA48432610    
+spring.jpa.hibernate.ddl-auto=update
